po: update po/ca_ES/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/member.po
+++ b/po/ca_ES/member.po
@@ -4,7 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2013
-# francescbassas <francesc@babu.cat>, 2015
+# francescbassas <francesc@babu.cat>, 2015-2016
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012
 # Marti <m.prat@ixiam.com>, 2014
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-11 09:49+0000\n"
+"PO-Revision-Date: 2016-01-21 22:21+0000\n"
 "Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
@@ -192,7 +192,7 @@ msgstr "Identificador de l'afiliat principal"
 #: CRM/Member/DAO/Membership.php CRM/Member/DAO/MembershipLog.php
 #: CRM/Member/DAO/MembershipType.php
 msgid "Max Related"
-msgstr ""
+msgstr "Màximes relacionades"
 
 #: CRM/Member/DAO/MembershipBlock.php
 msgid "Membership Type Default"
@@ -325,12 +325,12 @@ msgstr ""
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipType.php
 #: templates/CRM/Member/Form/MembershipView.tpl
 msgid "Max related"
-msgstr ""
+msgstr "Màximes relacionades"
 
 #: CRM/Member/Form/Membership.php
 #: templates/CRM/Member/Form/MembershipRenewal.tpl
 msgid "Membership Organization and Type"
-msgstr "Organització d'afiliació y tipus d'afiliació"
+msgstr "Organització de l'afiliació i tipus d'afiliació"
 
 #: CRM/Member/Form/Membership.php
 msgid "Status Override?"
@@ -681,7 +681,7 @@ msgstr "Introduïu un valor monetari per a la quota mínima."
 
 #: CRM/Member/Form/MembershipType.php
 msgid "Membership Organization"
-msgstr "Organització d'afiliació"
+msgstr "Organització de l'afiliació"
 
 #: CRM/Member/Form/MembershipType.php
 #: templates/CRM/Member/Page/MembershipType.tpl
@@ -1094,7 +1094,7 @@ msgstr ""
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid "Maximum number of related memberships (leave blank for unlimited)."
-msgstr ""
+msgstr "Màxim nombre d'afiliacions relacionades (deixeu-ho en blanc per il·limitades)."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
@@ -1844,7 +1844,7 @@ msgstr "Resum d'afiliacions"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "Members by Type"
-msgstr ""
+msgstr "Afiliats per tipus"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "(Last Month)"
@@ -2231,7 +2231,7 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Max Related Members for Type"
-msgstr ""
+msgstr "Màximes afiliacions relacionades per tipus"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Receipt Text"
