--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -34,8 +34,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-15 13:55+0000\n"
-"Last-Translator: Alain Schaefer <alain.schaefer@gmail.com>\n"
+"PO-Revision-Date: 2016-01-21 10:18+0000\n"
+"Last-Translator: Martin Peth <peth@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6437,11 +6437,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Months"
-msgstr ""
+msgstr "Monate"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Years"
-msgstr ""
+msgstr "Jahre"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Notes or Standard Terms"
