--- a/po/fr_FR/member.po
+++ b/po/fr_FR/member.po
@@ -6,7 +6,7 @@
 # Baptiste Bisson <bbisson.baptiste@gmail.com>, 2016
 # SR71 <ben.alard@gmail.com>, 2012
 # CARFIL <c.carfil.it@mairie-dammarie-les-lys.fr>, 2013
-# Peter <webmaster@lebouclier.com>, 2015
+# Peter <webmaster@lebouclier.com>, 2015-2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe Migrenne <migrenne@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -18,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 15:39+0000\n"
-"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
+"PO-Revision-Date: 2016-01-21 20:47+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2486,13 +2486,13 @@ msgstr ""
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "Automatically email a membership confirmation and receipt to %1 ?"
-msgstr ""
+msgstr "Envoyer automatiquement une confirmation d'adhésion et un reçu par courriel à %1 ?"
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid ""
 "OR if the payment is from a different contact, this email will only go to "
 "them."
-msgstr ""
+msgstr "SI le paiement vient d'un autre contact, le courriel ne sera envoyé qu'à celui-ci."
 
 #: templates/CRM/Member/Form/Membership.tpl
 msgid "No contacts are currently eligible to inherit this relationship."
