--- a/po/nl_NL/member.po
+++ b/po/nl_NL/member.po
@@ -7,15 +7,15 @@
 # HanV <han.velthuis@home.nl>, 2013-2016
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011
-# Kevin Levie <kevin@levity.nl>, 2015
+# Kevin Levie <kevin@levity.nl>, 2015-2016
 # majovdh <majo.vanderhispallie@gmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-12 01:32+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-01-22 14:33+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,7 +54,7 @@ msgstr "niet importeren"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Membership Fields"
-msgstr "Lidmaatschap Velden"
+msgstr "Lidmaatschapsvelden"
 
 #: CRM/Member/BAO/Membership.php
 msgid "Invalid date \"%1\" (must have form yyyy-mm-dd)."
