po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-14 12:09+0000\n"
+"PO-Revision-Date: 2016-01-22 14:29+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1925,7 +1925,7 @@ msgid ""
 "Click <a id='quickconfig' href='#'>here</a> if you want to configure the "
 "Regular Fees below as part of a Price Set, with the added flexibility and "
 "complexity that entails."
-msgstr ""
+msgstr "Klicka <a id = 'quickconfig' href='#'>här</a> om du vill konfigurera avgifterna som en del i en avgiftsstruktur, med den extra flexibilitet och komplexitet som det innebär."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -1966,7 +1966,7 @@ msgid ""
 " the event. This information will be displayed on the Event Information "
 "page. It will also be included in online registration pages and confirmation"
 " emails if these features are enabled."
-msgstr "Använd detta formulär för att ställa in plats och eventuellt kontakt information för arrangemanget. Denna information kommer att visas på arrangemangets informationssida. Det kommer ockås att finns med på webbanmälningassidkorna och i bekräftelsemejl om dessa funktioner är påslagna."
+msgstr "Använd detta formulär för att ställa in plats och eventuellt kontaktinformation för arrangemanget. Denna information kommer att visas på arrangemangets informationssida. Det kommer också att finns med på webbanmälningssidorna och i bekräftelsemejl om dessa funktioner är påslagna."
 
 #: templates/CRM/Event/Form/ManageEvent/Location.tpl
 msgid ""
