po: update po/lv_LV/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/lv_LV/common-base.po
+++ b/po/lv_LV/common-base.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-11 17:23+0000\n"
+"PO-Revision-Date: 2016-01-23 21:42+0000\n"
 "Last-Translator: karlif <freibergs@jesuits.net>\n"
 "Language-Team: Latvian (http://www.transifex.com/civicrm/civicrm/language/lv/)\n"
 "MIME-Version: 1.0\n"
@@ -1750,7 +1750,7 @@ msgstr "Kategorija"
 
 #: CRM/Contact/BAO/Group.php xml/templates/civicrm_data.tpl
 msgid "Child of"
-msgstr "Bērns "
+msgstr "Pieder"
 
 #: CRM/Contact/BAO/Group.php templates/CRM/Contact/Form/Search/Advanced.hlp
 #: templates/CRM/Contact/Form/Task/SaveSearch.tpl
@@ -15736,7 +15736,7 @@ msgstr "Vecāku grupas"
 msgid ""
 "%1 is included in these Parent group(s) based on belonging to group(s) which are their\n"
 "        children."
-msgstr ""
+msgstr "%1 ir iekļauti šajās Vecāk-grupās, vadoties pēc piederības grupām, kas ir to\nbērni."
 
 #: templates/CRM/Contact/Page/View/Delete.tpl
 msgid ""
@@ -16998,11 +16998,11 @@ msgstr ""
 
 #: templates/CRM/Group/Form/Search.tpl
 msgid "show child groups"
-msgstr ""
+msgstr "parādīt piederošās grupas"
 
 #: templates/CRM/Group/Form/Search.tpl
 msgid "hide child groups"
-msgstr ""
+msgstr "paslēpt piederošās grupas"
 
 #: templates/CRM/Group/Page/Group.hlp
 msgid ""
@@ -23376,7 +23376,7 @@ msgstr ""
 
 #: CRM/Contact/DAO/GroupNesting.php
 msgid "Child Group"
-msgstr ""
+msgstr "Piederošā grupa"
 
 #: CRM/Contact/DAO/GroupNesting.php
 msgid "Parent Group"
