po: update po/fr_FR/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/contribute.po
+++ b/po/fr_FR/contribute.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-01 19:20+0000\n"
+"PO-Revision-Date: 2016-01-25 21:28+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -2554,7 +2554,7 @@ msgstr "Date de réception de la contribution."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "Automatically email a receipt for this payment to %1?"
-msgstr "Envoyer une reçu automatique pour ce paiement par courriel à %1 ?"
+msgstr "Envoyer automatiquement un reçu pour ce paiement par courriel à %1 ?"
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "Automatically email a receipt for this payment to "
@@ -4975,7 +4975,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/SoftCredit.tpl
 msgid "another soft credit"
-msgstr ""
+msgstr "autre crédit indirect"
 
 #: templates/CRM/Contribute/Form/Task/PDFLetter.hlp
 msgid "Contribution Grouping"
