--- a/po/fr_FR/case.po
+++ b/po/fr_FR/case.po
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 15:39+0000\n"
-"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
+"PO-Revision-Date: 2016-01-25 21:25+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -564,7 +564,7 @@ msgstr "Vous pouvez aussi allouer cette activité à quelqu'un. Les activités a
 
 #: templates/CRM/Case/Form/Activity.tpl
 msgid "Send a Copy"
-msgstr "Envoyer une copie?"
+msgstr "Envoyer une copie ?"
 
 #: templates/CRM/Case/Form/Activity.tpl
 msgid ""
