--- a/po/fr_FR/mailing.po
+++ b/po/fr_FR/mailing.po
@@ -5,6 +5,7 @@
 # Translators:
 # SR71 <ben.alard@gmail.com>, 2012
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
+# Peter <webmaster@lebouclier.com>, 2016
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-25 21:10+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -699,7 +700,7 @@ msgstr "Rapport CiviMail : %1"
 
 #: CRM/Mailing/Page/Tab.php
 msgid "Mailings sent to %1"
-msgstr ""
+msgstr "Mailings envoyés à %1"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Successful "
@@ -1616,7 +1617,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/Recipients.php
 msgid "Recipient Phone"
-msgstr ""
+msgstr "Numéro de téléphone du destinataire"
 
 #: CRM/Mailing/Event/DAO/Confirm.php
 msgid "Mailing Confirmation ID"
@@ -1726,7 +1727,7 @@ msgid ""
 " <i><b>not</b></i> been added to any mailing lists. If this is your email "
 "address and you <i><b>wish to opt out</b></i> please enter your email "
 "address below for verification purposes:"
-msgstr ""
+msgstr "Si ceci n'est pas votre adresse mail, vous n'avez d'autre à faire. Vous <i><b>n'avez pas</b></i> été ajouté à un mailing list. Si ceci est votre adresse mail et que vous <i><b>souhaitez vous désinscrire</b></i>, merci de saisir votre adresse mail ci-dessous à des fins de vérification :"
 
 #: templates/CRM/Mailing/Form/Unsubscribe.tpl
 msgid "You are requesting to unsubscribe this email address:"
@@ -1794,11 +1795,11 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created By"
-msgstr ""
+msgstr "Test AB créé par"
 
 #: CRM/Mailing/DAO/MailingAB.php
 msgid "AB Test Created Date"
-msgstr ""
+msgstr "Date de création du test AB"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job ID"
@@ -1826,7 +1827,7 @@ msgstr ""
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail"
-msgstr ""
+msgstr "accéder à CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "access CiviMail subscribe/unsubscribe pages"
@@ -1838,7 +1839,7 @@ msgstr ""
 
 #: CRM/Mailing/Info.php
 msgid "delete in CiviMail"
-msgstr ""
+msgstr "supprimer dans CiviMail"
 
 #: CRM/Mailing/Info.php
 msgid "view public CiviMail content"
@@ -1846,15 +1847,15 @@ msgstr ""
 
 #: CRM/Mailing/Info.php
 msgid "create mailings"
-msgstr ""
+msgstr "créer les mailings"
 
 #: CRM/Mailing/Info.php
 msgid "schedule mailings"
-msgstr ""
+msgstr "planifier les mailings"
 
 #: CRM/Mailing/Info.php
 msgid "approve mailings"
-msgstr ""
+msgstr "valider les mailings"
 
 #: CRM/Mailing/PseudoConstant.php
 msgid "Draft"
