--- a/po/sv_SE/member.po
+++ b/po/sv_SE/member.po
@@ -10,13 +10,13 @@
 # bumby <martin@gnutiken.se>, 2011
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Julipan <stian@julipan.org>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2012-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2012-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-01-25 20:51+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2078,7 +2078,7 @@ msgstr "Aktiva medlemskap"
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Pending and Inactive Memberships"
-msgstr ""
+msgstr "Väntande och inaktiva medlemskap"
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid ""
