--- a/po/fr_FR/drupal-civicrm.po
+++ b/po/fr_FR/drupal-civicrm.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-01-02 15:50+0000\n"
+"PO-Revision-Date: 2016-01-25 21:18+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -1558,11 +1558,11 @@ msgstr "L'ID numérique de l'instance d'activité"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source Contact"
-msgstr ""
+msgstr "Contact source"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who scheduled this activity"
-msgstr ""
+msgstr "Le contact qui a programmé cette activité"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Source Contact"
@@ -1570,7 +1570,7 @@ msgstr "Contact CiviCRM source"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Source Record ID"
-msgstr ""
+msgstr "ID de la source de l'enregistrement"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who made this activity"
@@ -1662,7 +1662,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Assignee Contact ID"
-msgstr ""
+msgstr "Identifiant de contact de l'assigné"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who is assigned the activity."
@@ -1678,7 +1678,7 @@ msgstr ""
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Target Contact ID"
-msgstr ""
+msgstr "Identifiant du contact cible"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The contact who is the activity's target."
