po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -13,6 +13,7 @@
 # HanV <han.velthuis@home.nl>, 2011
 # Jan Hovenkamp <info@vvactief.nl>, 2014
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
+# Kevin Levie <kevin@levity.nl>, 2016
 # Martin Niewzwaag <info@cmseasy.nl>, 2012
 # Patrick Kyei <Patrick.kyei@muntpunt.be>, 2013
 # Patrick Kyei <Patrick.kyei@muntpunt.be>, 2013
@@ -21,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-12 02:18+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-01-25 18:12+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2830,11 +2831,11 @@ msgstr "Doorgaan"
 
 #: CRM/Contact/Form/DedupeRules.php CRM/Dedupe/DAO/RuleGroup.php
 msgid "Unsupervised"
-msgstr "Geen leidinggevende"
+msgstr "Zonder toezicht"
 
 #: CRM/Contact/Form/DedupeRules.php CRM/Dedupe/DAO/RuleGroup.php
 msgid "Supervised"
-msgstr "Leidinggevende"
+msgstr "Onder toezicht"
 
 #: CRM/Contact/Form/DedupeRules.php CRM/Dedupe/DAO/RuleGroup.php
 #: templates/CRM/Price/Page/Field.hlp
