po: update po/sv_SE/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/drupal-civicrm.po
+++ b/po/sv_SE/drupal-civicrm.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-01-14 14:23+0000\n"
+"PO-Revision-Date: 2016-01-25 20:50+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -1197,7 +1197,7 @@ msgstr "Är efterhandsbetalning"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Opted to Pay Later after Registration, and is still pending payment."
-msgstr "Valde att betala senare efter registrering, och status på betalning fortfarande 'avvaktande'."
+msgstr "Valde att betala senare efter registrering, och status är fortfarande 'väntar på betalning'."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Registered by ID"
@@ -1369,7 +1369,7 @@ msgstr "Är det en testinbetalning?"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Opted to Pay Contribution Later, and is still pending payment."
-msgstr "Valde att betala senare, och status för betalning fortfarande 'avvaktande'."
+msgstr "Valde att betala senare, och status för betalning fortfarande 'väntar på betalning'."
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM  Soft Credits"
