po: update po/sv_SE/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/event.po
+++ b/po/sv_SE/event.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-22 14:29+0000\n"
+"PO-Revision-Date: 2016-01-25 20:56+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -171,7 +171,7 @@ msgstr ""
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Create a pending registration"
-msgstr ""
+msgstr "Skapa en väntande anmälan"
 
 #: CRM/Event/Cart/Form/Checkout/Payment.php
 msgid "Financial institution didn't return a transaction id."
@@ -681,7 +681,7 @@ msgstr "Meddelande vid godkännande"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Pending participant expiration (hours)"
-msgstr "Kvarvarande tid för avvaktande deltagare (timmar)"
+msgstr "Kvarvarande tid för väntande deltagare (timmar)"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Please enter the number of hours (as an integer)."
@@ -1652,7 +1652,7 @@ msgid ""
 "The Payment Status for this participant is Completed. The Participant Status"
 " is set to Pending from pay later. Click Cancel if you want to review or "
 "modify these values before saving this record"
-msgstr "Betalningsstatus för denna deltagare är \"Klar\". Deltagarens status är satt till \"Avvaktar inbetalning\". Tryck \"Avbryt\" om du vill granska eller ändra dessa värden innan du sparar."
+msgstr "Betalningsstatus för denna deltagare är \"Klar\". Deltagarens status är satt till \"Väntar på betalning\". Tryck \"Avbryt\" om du vill granska eller ändra dessa värden innan du sparar."
 
 #: templates/CRM/Event/Form/ManageEvent/Delete.tpl
 msgid ""
@@ -1790,7 +1790,7 @@ msgid ""
 "space becomes available, the first participant from the waitlist will move "
 "to 'Pending from waitlist' status, and will be sent an email with a link to "
 "complete their registration (including paying event fees - if any)."
-msgstr "Klicka i denna ruta om du vill ge deltagarna möjlighet att ställa sig på väntelista om arrangemanget är fullt. Om det blir platser tillgängliga kommer den första deltagaren på väntelistan att få status 'Inväntar väntelista' och får ett e-postmeddelande med en länk till hur de kompletterar sin anmälan (inklusive erläggande av eventuella avgifter)."
+msgstr "Klicka i denna ruta om du vill ge deltagarna möjlighet att ställa sig på väntelista om arrangemanget är fullt. Om det blir platser tillgängliga kommer den första deltagaren på väntelistan att få status 'Väntar på väntelista' och får ett e-postmeddelande med en länk till hur de kompletterar sin anmälan (inklusive erläggande av eventuella avgifter)."
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -2094,7 +2094,7 @@ msgid ""
 "Participant Status' task. Approved participants will move to 'Pending from "
 "approval' status, and will be sent an email with a link to complete their "
 "registration (including paying event fees - if any). "
-msgstr ""
+msgstr "Markera denna kryssruta om du vill kräva godkännande för alla deltagare som anmäler sig själva innan de kan färdigställa sin anmälan. Deltagarna kommer att lägga i status 'Väntar på godkännande'. Du kan granska och godkänna deltagare genom att söka efter dom via \"Sök deltagare' - markera deltagaren/deltagarna och välj åtgärden 'Ändra deltagarens status'. De kommer då att få ett epostmeddelande med en länk som gör att de kan komplettera sin anmälan (inklusive erläggande av ev. avgifter)."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.hlp
 msgid "Time Limit"
@@ -2105,7 +2105,7 @@ msgid ""
 "Time limit <strong>in hours</strong> for confirming/finishing registration "
 "by participants with any of the pending statuses. Enter 0 (or leave empty) "
 "to disable this feature."
-msgstr "Tidsgräns <strong>i timmar</strong> för att bekräfta/avsluta anmälningen för deltagare med en avvaktande status (t.ex för bekräftelse vid erbjudanden om plats). Mata in 0 (eller lämna tomt) för att avaktivera tidsgränsen."
+msgstr "Tidsgräns <strong>i timmar</strong> för att bekräfta/avsluta anmälningen för deltagare med en väntande status (t.ex för bekräftelse vid erbjudanden om plats). Mata in 0 (eller lämna tomt) för att avaktivera tidsgränsen."
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "remove profile"
@@ -2713,7 +2713,7 @@ msgid ""
 " Attended will receive a confirmation email and their payment status will be"
 " set to completed. If this is not what you want to do, you can change their "
 "participant status by editing their event registration record directly."
-msgstr "Deltagare vars status ändras FRÅN \"Avvaktar inbetalning\" TILL \"Registrerade\" eller \"Deltog\" kommer att automatiskt få ett bekräftelsemail och deras betalningsstatus kommer att ändras till \"Klar\". Om detta inte är det du vill göra kan du ändra deras deltagarstatus genom att redigera anmälningsposten direkt."
+msgstr "Deltagare vars status ändras FRÅN \"Väntar på inbetalning\" TILL \"Registrerade\" eller \"Deltog\" kommer att automatiskt få ett bekräftelsemail och deras betalningsstatus kommer att ändras till \"Klar\". Om detta inte är det du vill göra kan du ändra deras deltagarstatus genom att redigera anmälningsposten direkt."
 
 #: templates/CRM/Event/Form/Task/Batch.tpl
 msgid ""
@@ -2770,7 +2770,7 @@ msgid ""
 "However, they will only be allowed to complete their registration if the "
 "event is not full (e.g. the number of registered participants is less than "
 "the maximum number of participants configured for the event)."
-msgstr "Om du flyttar deltagare från \"På väntelista\" till \"Avvaktar svar från väntelista\", var säker på att det finns platser på arrangemanget. Ett e-postmeddelande kommer att skickas automatisk till deltagaren med en länk där de kan bekräfta sin anmälan. De kommer emellertid inte att kunna slutföra sin bekräftelse om arrangemanget är fullt (dvs. om antalet registrerade deltagare är mindre än det maximala antalet som konfigurerats för arrangemanget)."
+msgstr "Om du flyttar deltagare från \"På väntelista\" till \"Väntar på svar från väntelista\", var säker på att det finns platser på arrangemanget. Ett e-postmeddelande kommer att skickas automatisk till deltagaren med en länk där de kan bekräfta sin anmälan. De kommer emellertid inte att kunna slutföra sin bekräftelse om arrangemanget är fullt (dvs. om antalet registrerade deltagare är mindre än det maximala antalet som konfigurerats för arrangemanget)."
 
 #: templates/CRM/Event/Form/Task/PickProfile.tpl
 msgid "Batch Update Event via Profile"
@@ -3377,7 +3377,7 @@ msgstr "Bekräfta din anmälan till %1"
 msgid ""
 "Your pending event registration for %1 has expired\n"
 "because you did not confirm your registration."
-msgstr "Din tidsbegränsade arrangemangsanmälan till %1 har⏎ löpt ut eftersom du inte bekräftade anmälningen i tid."
+msgstr "Din tidsbegränsade arrangemangsanmälan till %1 har\nlöpt ut eftersom du inte bekräftade erbjudan om en plats i tid."
 
 #: xml/templates/message_templates/participant_expired_html.tpl
 #: xml/templates/message_templates/participant_expired_text.tpl
@@ -3597,7 +3597,7 @@ msgid ""
 "Payment amount is less than the amount owed. Expected participant status is "
 "'Partially paid'. Are you sure you want to set the participant status to %1?"
 " Click OK to continue, Cancel to change your entries."
-msgstr ""
+msgstr "Inbetalningen är mindre än skulden. Förväntad deltagarstatus är \"Delvis betald\". Är du säker på att du vill sätta deltagarens status till %1? Klicka OK för att fortsätta, eller Avbryt för att ändra."
 
 #: templates/CRM/Event/Form/ParticipantFeeSelection.tpl
 msgid "Current Selections"
