po: update po/fr_FR/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/member.po
+++ b/po/fr_FR/member.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-21 20:47+0000\n"
+"PO-Revision-Date: 2016-01-25 21:17+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -2193,11 +2193,11 @@ msgstr ""
 
 #: CRM/Member/DAO/MembershipStatus.php
 msgid "Membership Status ID"
-msgstr ""
+msgstr "Identifiant du statut d'adhésion"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type ID"
-msgstr ""
+msgstr "Identifiant du type d'adhérent"
 
 #: CRM/Member/DAO/MembershipType.php
 msgid "Membership Type Domain"
@@ -2271,11 +2271,11 @@ msgstr ""
 
 #: CRM/Member/Form/Task/Delete.php CRM/Member/Task.php
 msgid "Delete Memberships"
-msgstr ""
+msgstr "Supprimer les adhésions"
 
 #: CRM/Member/Form/Task/Delete.php
 msgid "Deleted Membership(s)"
-msgstr ""
+msgstr "Adhésion(s) supprimée(s)"
 
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipView.tpl
@@ -2311,7 +2311,7 @@ msgstr ""
 
 #: templates/CRM/Member/Form/Task.tpl
 msgid "Number of selected memberships: %1"
-msgstr ""
+msgstr "Nombre d'adhésions sélectionnées : %1"
 
 #: templates/CRM/Member/Import/Form/DataSource.hlp
 msgid ""
