po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-14 14:59+0000\n"
+"PO-Revision-Date: 2016-01-25 21:01+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2497,7 +2497,7 @@ msgstr "Borttaget"
 #: CRM/Core/SelectValues.php templates/CRM/Contact/Page/View/GroupContact.tpl
 #: xml/templates/civicrm_data.tpl
 msgid "Pending"
-msgstr "Avvaktande"
+msgstr "Väntande"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Relationship ID"
@@ -15778,7 +15778,7 @@ msgstr ""
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "Pending (by %1)"
-msgstr "Avvaktande (av %1)"
+msgstr "Väntande (av %1)"
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid ""
@@ -16000,11 +16000,11 @@ msgstr "Säg upp prenumerationen"
 
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "Pending Subscriptions"
-msgstr "Avvaktande prenumerationer"
+msgstr "Väntande prenumerationer"
 
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "Your subscription to these group(s) is pending confirmation."
-msgstr "Dina prenumerationer på dessa grupper saknar bekräftelse."
+msgstr "Dina prenumerationer på dessa grupper väntar på bekräftelse."
 
 #: templates/CRM/Contact/Page/View/UserDashBoard/GroupContact.tpl
 msgid "Are you sure you want to confirm subscription for %1?"
@@ -20739,7 +20739,7 @@ msgstr "Automatisk bearbetningssats"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Partially paid"
-msgstr ""
+msgstr "Delvis betald"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Unpaid"
@@ -21145,11 +21145,11 @@ msgstr "Närvarade"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending from pay later"
-msgstr "Avvaktar efterhandsbetalning"
+msgstr "Väntar på efterhandsbetalning"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending from incomplete transaction"
-msgstr "Avvaktar avbruten anmälan"
+msgstr "Väntar på komplettering av avbruten anmälan"
 
 #: xml/templates/civicrm_data.tpl
 msgid "On waitlist"
@@ -21161,15 +21161,15 @@ msgstr "Väntar på godkännande"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending from waitlist"
-msgstr "Avvaktar svar från väntelista"
+msgstr "Väntar på svar från väntelista"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending from approval"
-msgstr "Avvaktar godkännande"
+msgstr "Väntar på godkännande"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending in cart"
-msgstr "Avvaktande i varukorgen"
+msgstr "Väntar i varukorgen"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Send Scheduled Mailings"
@@ -21273,7 +21273,7 @@ msgstr "Uppdatera deltagares status"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Updates pending event participant statuses based on time"
-msgstr "Uppdaterar avvaktande arrangemangsdeltagares status baserat på tid"
+msgstr "Uppdaterar väntande arrangemangsdeltagares status baserat på tid"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Update Membership Statuses"
@@ -21455,7 +21455,7 @@ msgstr ""
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Events - Pending Registration Expiration Notice"
-msgstr "Arrangemang - Avvaktande meddelande om anmälans utgångsdatum"
+msgstr "Arrangemang - Väntar på meddelande om anmälningens utlöpning"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Tell-a-Friend Email"
@@ -22446,7 +22446,7 @@ msgid ""
 "We have reset the COUNTED flag to false for the event participant status "
 "'Pending from incomplete transaction'. This change ensures that people who "
 "have a problem during registration can try again."
-msgstr "Vi har satt flaggan RÄKNAD till falskt för deltagarstatus \"Avvaktar avbruten anmälan\". Detta göra att personer som har problem med anmälningen kan försöka flera gånger."
+msgstr "Vi har satt flaggan RÄKNAD till falskt för deltagarstatus \"Väntar på komplettering av avbruten anmälan\". Detta göra att personer som har problem med anmälningen kan försöka flera gånger."
 
 #: CRM/Upgrade/Incremental/Legacy.php
 msgid "You are using custom template for contact subtypes: %1."
@@ -25598,7 +25598,7 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pending refund"
-msgstr ""
+msgstr "Väntar på återbetalning"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Eligible"
