po: update po/fr_FR/provinces.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/provinces.po
+++ b/po/fr_FR/provinces.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-24 23:38+0000\n"
+"PO-Revision-Date: 2016-01-25 21:01+0000\n"
 "Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -15511,99 +15511,99 @@ msgstr "Šentilj"
 
 msgctxt "province"
 msgid "Šentjernej"
-msgstr ""
+msgstr "Šentjernej"
 
 msgctxt "province"
 msgid "Šentjur"
-msgstr ""
+msgstr "Šentjur"
 
 msgctxt "province"
 msgid "Škocjan"
-msgstr ""
+msgstr "Škocjan"
 
 msgctxt "province"
 msgid "Škofja Loka"
-msgstr ""
+msgstr "Škofja Loka"
 
 msgctxt "province"
 msgid "Škofljica"
-msgstr ""
+msgstr "Škofljica"
 
 msgctxt "province"
 msgid "Šmarje pri Jelšah"
-msgstr ""
+msgstr "Šmarje pri Jelšah"
 
 msgctxt "province"
 msgid "Šmartno ob Paki"
-msgstr ""
+msgstr "Šmartno ob Paki"
 
 msgctxt "province"
 msgid "Šmartno pri Litiji"
-msgstr ""
+msgstr "Šmartno pri Litiji"
 
 msgctxt "province"
 msgid "Šoštanj"
-msgstr ""
+msgstr "Šoštanj"
 
 msgctxt "province"
 msgid "Štore"
-msgstr ""
+msgstr "Štore"
 
 msgctxt "province"
 msgid "Tišina"
-msgstr ""
+msgstr "Tišina"
 
 msgctxt "province"
 msgid "Trbovlje"
-msgstr ""
+msgstr "Trbovlje"
 
 msgctxt "province"
 msgid "Tržič"
-msgstr ""
+msgstr "Tržič"
 
 msgctxt "province"
 msgid "Turnišče"
-msgstr ""
+msgstr "Turnišče"
 
 msgctxt "province"
 msgid "Velike Lašče"
-msgstr ""
+msgstr "Velike Lašče"
 
 msgctxt "province"
 msgid "Veržej"
-msgstr ""
+msgstr "Veržej"
 
 msgctxt "province"
 msgid "Zavrč"
-msgstr ""
+msgstr "Zavrč"
 
 msgctxt "province"
 msgid "Zreče"
-msgstr ""
+msgstr "Zreče"
 
 msgctxt "province"
 msgid "Žalec"
-msgstr ""
+msgstr "Žalec"
 
 msgctxt "province"
 msgid "Železniki"
-msgstr ""
+msgstr "Železniki"
 
 msgctxt "province"
 msgid "Žetale"
-msgstr ""
+msgstr "Žetale"
 
 msgctxt "province"
 msgid "Žiri"
-msgstr ""
+msgstr "Žiri"
 
 msgctxt "province"
 msgid "Žirovnica"
-msgstr ""
+msgstr "Žirovnica"
 
 msgctxt "province"
 msgid "Žužemberk"
-msgstr ""
+msgstr "Žužemberk"
 
 msgctxt "province"
 msgid "Kalimantan Tengah"
@@ -15619,47 +15619,47 @@ msgstr "Kalimantan du Nord"
 
 msgctxt "province"
 msgid "Ankaran"
-msgstr ""
+msgstr "Ankaran"
 
 msgctxt "province"
 msgid "Apače"
-msgstr ""
+msgstr "Apače"
 
 msgctxt "province"
 msgid "Cirkulane"
-msgstr ""
+msgstr "Cirkulane"
 
 msgctxt "province"
 msgid "Gorje"
-msgstr ""
+msgstr "Gorje"
 
 msgctxt "province"
 msgid "Kostanjevica na Krki"
-msgstr ""
+msgstr "Kostanjevica na Krki"
 
 msgctxt "province"
 msgid "Log-Dragomer"
-msgstr ""
+msgstr "Log-Dragomer"
 
 msgctxt "province"
 msgid "Makole"
-msgstr ""
+msgstr "Makole"
 
 msgctxt "province"
 msgid "Mirna"
-msgstr ""
+msgstr "Mirna"
 
 msgctxt "province"
 msgid "Mokronog-Trebelno"
-msgstr ""
+msgstr "Mokronog-Trebelno"
 
 msgctxt "province"
 msgid "Odranci"
-msgstr ""
+msgstr "Odranci"
 
 msgctxt "province"
 msgid "Oplotnica"
-msgstr ""
+msgstr "Oplotnica"
 
 msgctxt "province"
 msgid "Ormož"
@@ -15719,7 +15719,7 @@ msgstr ""
 
 msgctxt "province"
 msgid "Ptuj"
-msgstr ""
+msgstr "Ptuj"
 
 msgctxt "province"
 msgid "Puconci"
