--- a/po/fr_FR/financial.po
+++ b/po/fr_FR/financial.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-13 15:39+0000\n"
-"Last-Translator: Baptiste Bisson <bbisson.baptiste@gmail.com>\n"
+"PO-Revision-Date: 2016-01-25 21:11+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -821,7 +821,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Is Tax Deductible?"
-msgstr ""
+msgstr "La taxe est-elle déductible ?"
 
 #: CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type is Reserved?"
