po: update po/sv_SE/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/pledge.po
+++ b/po/sv_SE/pledge.po
@@ -5,12 +5,12 @@
 # Translators:
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2015
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2011-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-15 10:15+0000\n"
+"PO-Revision-Date: 2016-01-25 18:17+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -468,7 +468,7 @@ msgid ""
 "Pledges are \"Pending\" until the first payment is received. Once a payment "
 "is received, status is \"In Progress\" until all scheduled payments are "
 "completed. Overdue pledges are ones with payment(s) past due."
-msgstr "Inbetalningar enligt utfästelse registreras som \"avvaktar\" tills den första betalningen har mottagits. När en betalning har mottagits ändras status till \"under bearbetning\" tills alla schemalagda betalningar har utförts. Förfallna utfästelser är utfästelser där betalningsdatum har passerat."
+msgstr "Inbetalningar enligt utfästelse registreras som \"väntar på\" tills den första betalningen har mottagits. När en betalning har mottagits ändras status till \"under bearbetning\" tills alla schemalagda betalningar har utförts. Förfallna utfästelser är utfästelser där betalningsdatum har passerat."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
