--- a/po/nl_NL/campaign.po
+++ b/po/nl_NL/campaign.po
@@ -8,13 +8,14 @@
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
+# Kevin Levie <kevin@levity.nl>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-11 17:20+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-01-26 16:41+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -214,7 +215,7 @@ msgstr "Kan enquête niet vinden"
 
 #: CRM/Campaign/Form/Petition/Signature.php
 msgid "Sign the Petition"
-msgstr "Onderteken de petitie"
+msgstr "Teken de petitie"
 
 #: CRM/Campaign/Form/Petition.php
 msgid "Edit Survey"
@@ -1216,4 +1217,4 @@ msgid ""
 "related to a particular fund-raising or engagement effort. You can link "
 "activities, contributions, event participation, mailings, membership "
 "signups, and pledges to a particular campaign."
-msgstr "Uw organisatie kan campagnes gebruiken om alle interacties met uw publiek die te maken hebben met een bepaalde inzameling of inspanningen voor een actie. U kunt activiteiten, bijdragen, deelnames aan evenementen, mailingen, aanmeldingen voor lidmaatschap en toezeggingen aan een bepaalde campagne koppelen."
+msgstr "Uw organisatie kan campagnes gebruiken om alle interacties met uw publiek die te maken hebben met een bepaalde inzameling of inspanningen voor een actie. U kunt activiteiten, bijdragen, deelnames aan evenementen, mailings, aanmeldingen voor lidmaatschap en toezeggingen aan een bepaalde campagne koppelen."
