--- a/po/nl_NL/case.po
+++ b/po/nl_NL/case.po
@@ -11,13 +11,14 @@
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011-2012
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
+# Kevin Levie <kevin@levity.nl>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-18 13:42+0000\n"
-"Last-Translator: Arnaud De Moyer <arnauddemoyer@gmail.com>\n"
+"PO-Revision-Date: 2016-01-27 03:14+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -51,7 +52,7 @@ msgstr "Naar dossier kopiëren"
 
 #: CRM/Case/BAO/Case.php
 msgid "View Attachment"
-msgstr "Bekijk Bijlage"
+msgstr "Bekijk bijlage"
 
 #: CRM/Case/BAO/Case.php
 msgid "File %1 does not exist or is not readable"
@@ -319,7 +320,7 @@ msgstr "Het geselecteerde dossier is verwijderd. U kunt dit dossier bekijken en/
 
 #: CRM/Case/Form/Case.php
 msgid "Case Deleted"
-msgstr "Dossier Verwijderd"
+msgstr "Dossier verwijderd."
 
 #: CRM/Case/Form/Case.php
 msgid "The selected case has been restored.<br />"
