po: update po/nl_NL/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/batch.po
+++ b/po/nl_NL/batch.po
@@ -9,14 +9,15 @@
 # HanV <han.velthuis@home.nl>, 2013,2015
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2012-2013,2015
+# Kevin Levie <kevin@levity.nl>, 2016
 # Maurice Snellen <maurice@snellen.xs4all.nl>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-06-09 18:41+0000\n"
-"Last-Translator: Maurice Snellen <maurice@snellen.xs4all.nl>\n"
-"Language-Team: Dutch (http://www.transifex.com/projects/p/civicrm/language/nl/)\n"
+"POT-Creation-Date: 2015-12-09 21:23-0500\n"
+"PO-Revision-Date: 2016-01-26 14:41+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -65,7 +66,7 @@ msgstr "Geen exportopmaak geselecteerd."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Exported Date"
-msgstr "Datum van exporteren"
+msgstr "Tijd van exporteren"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Number of items"
@@ -204,7 +205,7 @@ msgstr "Batch gewijzigd op"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Smart Group"
-msgstr "Batch slimme groep"
+msgstr "Smartgroep-batch"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Total"
