po: update po/nl_NL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -11,6 +11,7 @@
 # janharmen <jan-harmen@hotmail.com>, 2011
 # janharmen <jan-harmen@hotmail.com>, 2011
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
+# Kevin Levie <kevin@levity.nl>, 2016
 # majovdh <majo.vanderhispallie@gmail.com>, 2012
 # majovdh <majo.vanderhispallie@gmail.com>, 2012
 # Martin Niewzwaag <info@cmseasy.nl>, 2012
@@ -19,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-11 17:21+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-01-27 03:13+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -64,7 +65,7 @@ msgstr "De periodieke bijdrage van %1, elke %2 %3 is beëindigd."
 #: CRM/Contribute/BAO/ContributionRecur.php
 #: CRM/Contribute/Form/CancelSubscription.php
 msgid "Recurring contribution cancelled"
-msgstr "Periodieke bijdrage beëindigt"
+msgstr "Periodieke bijdrage geannuleerd"
 
 #: CRM/Contribute/BAO/ManagePremiums.php
 msgid ""
@@ -80,7 +81,7 @@ msgstr "Geselecteerde optie"
 msgid ""
 "The contribution type criteria is now obsolete, please update your smart "
 "group"
-msgstr "De criteria van het bijdragetype is nu verouderd, Wijzig a.u.b. uw smart groep"
+msgstr "De criteria van het bijdragetype is nu verouderd, Wijzig a.u.b. uw smartgroep"
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Contribution Total Amount %1 %2"
@@ -182,7 +183,7 @@ msgstr "Batchnaam %1 %2"
 msgid ""
 "We did not recognize the search field: %1. Please check and fix your "
 "contribution related smart groups."
-msgstr "Het zoekveld %1 is niet herkend. Controleer uw smart groepen die gerelateerd zijn aan bijdragen."
+msgstr "Het zoekveld %1 is niet herkend. Controleer uw smartgroepen die gerelateerd zijn aan bijdragen."
 
 #: CRM/Contribute/BAO/Query.php
 msgid "Currency Type"
@@ -4954,7 +4955,7 @@ msgstr "Als u een of meer specifieke velden wilt toevoegen, dan kunt u dat doen 
 msgid ""
 "Save your profile to return to this screen. You can preview it from here by "
 "clicking the Preview (microsope) button."
-msgstr "Sla eerst uw profiel op, om dan terug te keren naar dit scherm. U kunt het eerst van te voren beoordelen door op de knop Voorvertoning (microscoop) te klikken."
+msgstr "Sla eerst uw profiel op, om dan terug te keren naar dit scherm. U kunt het eerst van te voren beoordelen door op de knop Voorvertoning te klikken."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Custom.tpl
 msgid ""
