--- a/po/nl_NL/countries.po
+++ b/po/nl_NL/countries.po
@@ -6,14 +6,15 @@
 # Arnaud De Moyer <arnauddemoyer@gmail.com>, 2015
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
 # Johan Beckers <johan@carecompany.be>, 2013
+# Kevin Levie <kevin@levity.nl>, 2016
 # Martin Niewzwaag <info@cmseasy.nl>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-18 13:40+0000\n"
-"Last-Translator: Arnaud De Moyer <arnauddemoyer@gmail.com>\n"
+"PO-Revision-Date: 2016-01-27 02:38+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -243,11 +244,11 @@ msgstr "Comoren"
 
 msgctxt "country"
 msgid "Congo, The Democratic Republic of the"
-msgstr "Democratische Republiek Congo"
+msgstr "Democratische Republiek Congo (Congo-Kinshasa)"
 
 msgctxt "country"
 msgid "Congo, Republic of the"
-msgstr "Democratische Republiek Congo"
+msgstr "Republiek Congo (Congo-Brazzaville)"
 
 msgctxt "country"
 msgid "Cook Islands"
@@ -1047,4 +1048,4 @@ msgstr "Saint Barthélemy"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr "Sint Maarten (Franse deel)"
+msgstr "Sint Maarten (Frans deel)"
