--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -8,14 +8,15 @@
 # HanV <han.velthuis@home.nl>, 2011-2012
 # HanV <han.velthuis@home.nl>, 2011
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
+# Kevin Levie <kevin@levity.nl>, 2016
 # majovdh <majo.vanderhispallie@gmail.com>, 2012
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-12 00:15+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-01-27 03:12+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -43,7 +44,7 @@ msgstr "Tekengrootte"
 
 #: CRM/Admin/Form/LabelFormats.php CRM/Badge/Form/Layout.php
 msgid "Font Style"
-msgstr "Letterstijl"
+msgstr "Tekenstijl"
 
 #: CRM/Admin/Form/LocationType.php templates/CRM/Admin/Page/LabelFormats.tpl
 #: templates/CRM/Admin/Page/LocationType.tpl
@@ -118,7 +119,7 @@ msgstr "De informatie van de betaalmethode ontbreekt"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Site URL"
-msgstr "Website URL"
+msgstr "Website-URL"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "Recurring Payments URL"
@@ -173,7 +174,7 @@ msgstr "Voorwaarde voor actie"
 #: CRM/Admin/Form/ScheduleReminders.php
 #: CRM/Event/Form/ManageEvent/ScheduleReminders.php
 msgid "Date Field"
-msgstr "Datum veld"
+msgstr "Datumveld"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 #: CRM/Event/Form/ManageEvent/ScheduleReminders.php
@@ -1332,7 +1333,7 @@ msgstr "Informeer-een-vriend limiet"
 msgid ""
 "How many recipients can they send emails to at one time? You may want to "
 "limit this to prevent large mail blasts from being sent."
-msgstr "Aan hoe veel ontvangers kunnen zij in één keer mails versturen? U kunt een limiet instellen om een enorme omvang van mailingen te voorkomen. "
+msgstr "Aan hoe veel ontvangers kunnen zij in één keer mails versturen? U kunt een limiet instellen om een enorme omvang van mailings te voorkomen. "
 
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: templates/CRM/PCP/Form/Contribute.hlp
@@ -2199,7 +2200,7 @@ msgstr "Aantal items"
 #: xml/templates/message_templates/membership_offline_receipt_html.tpl
 #: xml/templates/message_templates/membership_offline_receipt_text.tpl
 msgid "Thank you for your support."
-msgstr "Dank u wel voor uw ondersteuning."
+msgstr "Bedankt voor uw steun."
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Financial/DAO/FinancialType.php
 msgid "Financial Type ID"
@@ -2368,7 +2369,7 @@ msgstr "bedrag voor belasting:"
 #: CRM/Member/Form/Search.php CRM/Report/Form/Member/Lapse.php
 #: CRM/Report/Form/Membership/Summary.php
 msgid "Member Name"
-msgstr "Lid Naam"
+msgstr "Naam lid"
 
 #: CRM/Pledge/DAO/Pledge.php CRM/Report/Form/Pledge/Detail.php
 msgid "Total Pledged"
