--- a/po/nl_NL/grant.po
+++ b/po/nl_NL/grant.po
@@ -10,10 +10,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-06-23 17:41+0000\n"
-"Last-Translator: Maurice Snellen <maurice@snellen.xs4all.nl>\n"
-"Language-Team: Dutch (http://www.transifex.com/projects/p/civicrm/language/nl/)\n"
+"POT-Creation-Date: 2015-12-09 21:23-0500\n"
+"PO-Revision-Date: 2016-01-27 03:10+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
