po: update po/nl_NL/extension.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/extension.po
+++ b/po/nl_NL/extension.po
@@ -7,13 +7,13 @@
 # brouwser <brouwer@ee-atwork.nl>, 2013
 # HanV <han.velthuis@home.nl>, 2013,2015-2016
 # HanV <han.velthuis@home.nl>, 2013,2015
-# Kevin Levie <kevin@levity.nl>, 2015
+# Kevin Levie <kevin@levity.nl>, 2015-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-01-12 01:18+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-01-26 12:54+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -107,7 +107,7 @@ msgstr "De extensie map is niet ingesteld of is niet schrijfbaar. Klik <a href='
 
 #: CRM/Extension/Downloader.php
 msgid "ZIP Support Required"
-msgstr "Ondersteuning voor ZIP vereist"
+msgstr "Ondersteuning voor ZIP-bestanden vereist"
 
 #: CRM/Extension/Downloader.php
 msgid ""
@@ -126,11 +126,11 @@ msgstr "Uitpakken van de extensie is mislukt: %1 kan niet gewist worden"
 
 #: CRM/Extension/Downloader.php
 msgid "Installation Error"
-msgstr "Installatie fout"
+msgstr "Installatiefout"
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension to %1."
-msgstr "Uitpakken extensie %1 is mislukt."
+msgstr "Het uitpakken van extensie %1 is mislukt."
 
 #: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension."
